<resources>
    <string name="qq_login">登录</string>
    <string name="qq_logout">退出当前账号</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="xadw">sss</string>
    <string name="vitamio_library_app_name">VitamioLibrary</string>
    <string name="vitamio_init_decoders">Initializing decoders…</string>
    <string name="permission_group_tools_label">Vitamio tools</string>
    <string name="permission_group_tools_description">Access Vitamio package and resources.</string>
    <string name="permission_receive_messages_label">Receive Vitamio messages</string>
    <string name="permission_receive_messages_description">Receive all broadcasts from Vitamio service.</string>
    <string name="permission_write_providers_label">Write Vitamio providers</string>
    <string name="permission_write_providers_description">Delete, update or create new items in Vitamio providers.</string>
    <string name="VideoView_error_title">Cannot play video</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to this device.</string>
    <string name="VideoView_error_text_unknown">视频下载出错，无法进行播放！</string>
    <string name="VideoView_error_button">OK</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>
    <string name="pull_to_refresh_loading_more">正在加载更多…</string>
    <string name="button_expand">展开</string>
    <string name="button_collapse">收起</string>
    <string name="pull_to_refresh_text">下拉刷新</string>
    <string name="pull_to_refreshing_text">正在刷新</string>
    <string name="pull_to_rlease_text">释放刷新</string>
    <string name="app_name">JREDU</string>
    <string name="login_completed">登录成功</string>
    <string name="login_canceled">取消</string>
    <string name="login_failed">登录失败</string>
    <string name="login_freeze">帐号已被冻结，如有疑问请联系kf@imooc.com</string>
    <string name="login_authdenied">拒绝授权</string>
    <string name="login_auth_error">授权失败</string>
    <string name="login_auth_cancel">取消授权</string>
    <string name="login_auth_userinfo_completed">授权且获取用户信息成功</string>
    <string name="login_userinfo_error">获取用户信息失败</string>
    <string name="mail_inexistence">邮箱不存在</string>
    <string name="share_completed">分享成功</string>
    <string name="share_canceled">分享已取消</string>
    <string name="share_failed">分享失败</string>
    <string name="shareing">正在分享</string>
    <string name="wechat_tip">您的设备未安装微信</string>
    <string name="sina_tip">您的设备未安装新浪微博</string>
    <string name="share_image_error">获取图片失败，请稍后重试</string>
    <string name="weibo_oauth_regiseter">应用授权</string>
    <string name="website">http://www.shareSDK.cn</string>
    <string name="weibo_upload_content">分享图片</string>
    <string name="wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="qq_client_inavailable">QQ 版本过低或者没有安装，需要升级或安装QQ才能使用！</string>
    <string name="weibo_tip">您的账号存在异常，请登录新浪微博解锁后登录慕课网！</string>
    <string name="sinaweibo">新浪微博</string>
    <string name="qzone">QQ空间</string>
    <string name="wechat">微信好友</string>
    <string name="wechatmoments">微信朋友圈</string>
    <string name="email">邮箱</string>
    <string name="shortmessage">信息</string>
    <string name="qq">QQ</string>
    <string name="time_format">%1$s小时</string>
    <string name="connect_server_timeout">请求服务器超时！</string>
    <string name="connect_server_error">请求服务器异常！</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_label">登录慕课网</string>
    <string name="login_title">慕课网账号登录</string>
    <string name="login_user_create">慕课网账号创建中</string>
    <string name="qq_lable">QQ账号登录</string>
    <string name="weibo_lable">微博账号登录</string>
    <string name="wechat_login_lable">微信登录</string>
    <string name="qq_login_lable">QQ登录</string>
    <string name="weibo_login_lable">微博登录</string>
    <string name="supplement_info">完善资料</string>
    <string name="imooc_user_exists">已有慕课帐号请</string>
    <string name="imooc_user_bound">绑定帐号</string>
    <string name="bound_over">立即绑定</string>
    <string name="register">注册</string>
    <string name="register_success">注册成功</string>
    <string name="register_error">注册失败</string>
    <string name="regist_title">注册慕课网账号</string>
    <string name="forget_title">找回密码</string>
    <string name="forget">忘记密码？</string>
    <string name="forget_success">申请已提交，请查收邮件</string>
    <string name="visitor_label">随便看看</string>
    <string name="mail_login_label">慕课网帐号登录</string>
    <string name="email_name_msg">登录邮箱</string>
    <string name="email_tip">输入您的邮箱</string>
    <string name="email_registed">邮箱已注册</string>
    <string name="password_tip">输入您的密码</string>
    <string name="reset_password">重置密码</string>
    <string name="forgetpwd_lable">点击重置后，请登录邮箱查收重置密码邮件</string>
    <string name="forgetpwd_email_null_error">邮箱不能为空</string>
    <string name="send_success">发送成功</string>
    <string name="register_hinttip_nickname">输入昵称</string>
    <string name="register_hinttip_email">电子邮箱</string>
    <string name="register_hinttip_password">设置密码</string>
    <string name="register_null_tip">请您输入完整！</string>
    <string name="register_over">重置</string>
    <string name="email_psw_msg">密码</string>
    <string name="email_null_error">账号或密码不能为空</string>
    <string name="email_null_tip">请输入邮箱！</string>
    <string name="password_null_tip">请输入密码！</string>
    <string name="email_error">邮箱格式输入错误</string>
    <string name="nickname_error">昵称必须为2~18位中英文、数字及下划线！</string>
    <string name="password_error">请输入6~16位密码，区分大小写，不能使用空格！</string>
    <string name="share_label">分享课程</string>
    <string name="share_qq_label">QQ好友</string>
    <string name="share_email_label">邮件</string>
    <string name="share_weixin_label">微信好友</string>
    <string name="share_wxfriends_label">朋友圈</string>
    <string name="share_weibo_label">新浪微博</string>
    <string name="share_qqzone_label">QQ空间</string>
    <string name="share_edit_tip">说点什么吧...</string>
    <string name="write_prompt">%1$s</string>
    <string name="share_send_tip">分享内容不能为空！</string>
    <string name="share_dialog_loading">正在分享</string>
    <string name="share_dialog_load_success">分享成功</string>
    <string name="share_dialog_load_error">分享失败</string>
    <string name="dialog_sendding">正在提交</string>
    <string name="dialog_send_success">提交成功</string>
    <string name="dialog_send_error">提交失败</string>
    <string name="request_completed">请求成功</string>
    <string name="request_failed">请求失败</string>
    <string name="send_null_tip">发送内容不能为空！</string>
    <string name="send_nullstring_tip">发送内容不能为空格或换行！</string>
    <string name="cancel">取消</string>
    <string name="continue_label">继续</string>
    <string name="share_email_title">来自慕课网分享</string>
    <string name="share_content">我正在使用#慕课网# Android客户端学习《%1$s》课程，快来看看吧，慕课网，程序员的梦工厂，让我们来一场与IT学习有关的自我革命。</string>
    <string name="applink">http://www.mukewang.com/mobile/androidapp</string>
    <string name="submit">提交</string>
    <string name="userdetail">个人信息</string>
    <string name="allcourse">全部课程</string>
    <string name="mycourse">我的课程</string>
    <string name="download">离线缓存</string>
    <string name="mymessage">我的消息</string>
    <string name="mytalk">我的讨论</string>
    <string name="mynote">我的笔记</string>
    <string name="article">文章</string>
    <string name="notedetail">笔记详情</string>
    <string name="setting">设置</string>
    <string name="session">会话</string>
    <string name="clear_search_history">清空搜索历史</string>
    <string name="relative_classes">相关课程</string>
    <string name="search_history">历史记录</string>
    <string name="search_result">搜索结果</string>
    <string name="update_no_file">文件未找到</string>
    <string name="outnumber_input">超过规定数字</string>
    <string name="login_click">点击登录</string>
    <string name="login_history_toast">无历史登录信息！</string>
    <string name="share_evernote_lable">印象笔记</string>
    <string name="share_ynote_label">有道云笔记</string>
    <string name="share_pocket_label">Pocket</string>
    <string name="share_apk_not_installed">请安装应用后分享~</string>
    <string name="login_rightnow">立即登录</string>
    <string name="user_nickname">用户昵称</string>
    <string name="only_wifi_download">允许非WIFI网络播放/缓存视频</string>
    <string name="only_wifi_download_illustrate">请慎重选择开启 避免过度使用流量</string>
    <string name="grade">给我评分</string>
    <string name="push_label">推送通知</string>
    <string name="sdcard_label">离线缓存路径设置</string>
    <string name="push_setting_warm">关闭推送，您将不能收到任何通知！</string>
    <string name="push_setting_allday_lable">接收推送通知</string>
    <string name="push_setting_starttime">开始时间</string>
    <string name="push_setting_stoptime">结束时间</string>
    <string name="push_setting_time">修改时间</string>
    <string name="push_setting_timeshow">%1$s-%2$s</string>
    <string name="suggest_label">意见反馈</string>
    <string name="suggest_pic_chooser">请选择图片格式上传</string>
    <string name="suggest_contact_label">手机/邮箱/QQ</string>
    <string name="suggest_hint_label">在这里喷倒我们的产品经理吧！</string>
    <string name="suggest_tip_null">意见没写怎么能提交呢？</string>
    <string name="suggest_contract_null">请输入联系方式</string>
    <string name="update_label">版本更新</string>
    <string name="find_newversion">发现新版本</string>
    <string name="update_later">以后再说</string>
    <string name="update_now">现在升级</string>
    <string name="update_service_error">服务器繁忙，请重新升级</string>
    <string name="about_label">关于慕课</string>
    <string name="grade_label">给我评分</string>
    <string name="version_label">Version %1$s</string>
    <string name="copyright_label">Copyright © 2015 imooc.com All rights reserved.</string>
    <string name="qq_group_label">QQ群：178759087</string>
    <string name="clear_label">清除缓存</string>
    <string name="logout_label">退出登录</string>
    <string name="logout_isOK_lable">确定要登出账号吗？</string>
    <string name="logout_yes_lable">是</string>
    <string name="logout_no_lable">否</string>
    <string name="about_mooc_label">关于我们</string>
    <string name="crash_msg_label">一不小心程序发生了错误，我们正在收集信息，放心...</string>
    <string name="clear_cache_label">正在清理缓存...</string>
    <string name="clear_cache_success_label">清理成功</string>
    <string name="crash_msg_success_label">收集成功，我们会尽快处理。</string>
    <string name="clear_dialog_msg">"您确定要清除应用缓存吗？
（该操作不会删除缓存课程）"</string>
    <string name="yes_label">确定</string>
    <string name="check_update_label">正在检测更新</string>
    <string name="update_dialog_title">更新</string>
    <string name="update_cancel">取消更新</string>
    <string name="update_backgrounder">后台运行</string>
    <string name="update_dialog_content">正在升级新版本</string>
    <string name="downloading_update_label">正在下载版本，请稍候</string>
    <string name="downloading_update_tip">正在下载新版本，请勿着急！</string>
    <string name="update_download_over">下载完成</string>
    <string name="update_download_cancel">取消升级</string>
    <string name="update_failed">更新失败</string>
    <string name="no_update_label">已是最新</string>
    <string name="update">升级</string>
    <string name="suggest_success">反馈提交成功，感谢参与！</string>
    <string name="suggest_fail">反馈提交失败，请重试</string>
    <string name="exit_label">退出</string>
    <string name="runback_label">后台运行</string>
    <string name="download_alert_label">正在为您缓存课程，退出将会暂停任务</string>
    <string name="exit_dialog_msg">确定退出慕课网？</string>
    <string name="setting_sdcard_label">SD卡存储</string>
    <string name="setting_phone_label">手机存储</string>
    <string name="sdcard_size_label">(剩余%1$s)</string>
    <string name="video_auto_play">视频自动播放</string>
    <string name="head_photo_updating">头像审核中</string>
    <string name="no_legal_market">暂不支持三星应用商店，欢迎安装其他应用商店评分</string>
    <string name="app_recommend">应用推荐</string>
    <string name="about_share_content">慕课网-国内最大的IT技能平台</string>
    <string name="about_share_title">移动慕课网，来一场与IT学习有关的自我革命！</string>
    <string name="about_share_url">http://www.imooc.com/mobile/app</string>
    <string name="about_share_imagepath">http://imooc.com/app/logo-share.png</string>
</resources>